# greenmqtt

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml
.github/workflows/: ci.yml
capnp/: greenmqtt_rpc.capnp
charts/greenmqtt/: Chart.yaml  values.yaml
charts/greenmqtt/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml  store-service.yaml  store-statefulset.yaml
charts/greenmqtt/templates/tests/: test-http.yaml
config/: local.toml
crates/greenmqtt-broker/: Cargo.toml
crates/greenmqtt-broker/src/: lib.rs  tests.rs
crates/greenmqtt-broker/src/broker/: admission.rs  balancer.rs  metrics.rs  mod.rs  pressure.rs  runtime.rs  send_quota.rs  session_mgr.rs  stats.rs  tenant.rs  throttle.rs  token_bucket.rs
crates/greenmqtt-broker/src/mqtt/: auth.rs  codec.rs  connect.rs  delivery.rs  error.rs  mod.rs  parser.rs  publish.rs  response.rs  session.rs  state.rs  subscribe.rs  transport.rs  util.rs  writer.rs
crates/greenmqtt-broker/src/mqtt/tests/: connect.rs  fuzz_tests.rs  mod.rs  protocol.rs  publish.rs  quic_tests.rs  session.rs  subscribe.rs  tcp_tests.rs  tls_tests.rs  ws_tests.rs  wss_tests.rs
crates/greenmqtt-capnp/: Cargo.toml  build.rs
crates/greenmqtt-capnp/src/: lib.rs
crates/greenmqtt-cli/: Cargo.toml
crates/greenmqtt-cli/src/: bench.rs  commands.rs  listeners.rs  main.rs  main_tests.rs
crates/greenmqtt-cli/src/runtime_support/: control_plane.rs  hosted.rs  mod.rs  store.rs
crates/greenmqtt-cli/tests/: cluster_redis.rs  multi_listener_profiles.rs
crates/greenmqtt-cluster/: Cargo.toml
crates/greenmqtt-cluster/src/: failure_detector.rs  lib.rs  membership.rs
crates/greenmqtt-core/: Cargo.toml
crates/greenmqtt-core/src/: lib.rs
crates/greenmqtt-dist/: Cargo.toml
crates/greenmqtt-dist/src/: lib.rs  tests.rs  trie.rs
crates/greenmqtt-http-api/: Cargo.toml
crates/greenmqtt-http-api/src/: admin.rs  cluster.rs  lib.rs  publish.rs  query.rs  range.rs  session.rs  shard.rs  subscription.rs  tests.rs
crates/greenmqtt-http-api/src/http_api/: mod.rs
crates/greenmqtt-http-api/src/tests/: flow_metrics.rs  mod.rs  offline_inflight.rs  peer_quota.rs  query_audit.rs  range.rs  routes.rs  sessiondict.rs  shard.rs  subscriptions.rs
crates/greenmqtt-inbox/: Cargo.toml
crates/greenmqtt-inbox/src/: handle.rs  lib.rs  state.rs  tests.rs
crates/greenmqtt-kv-balance/: Cargo.toml
crates/greenmqtt-kv-balance/src/: lib.rs
crates/greenmqtt-kv-client/: Cargo.toml
crates/greenmqtt-kv-client/src/: cache.rs  client.rs  consistency.rs  control.rs  error.rs  executor.rs  lib.rs  router.rs
crates/greenmqtt-kv-engine/: Cargo.toml
crates/greenmqtt-kv-engine/src/: lib.rs
crates/greenmqtt-kv-raft/: Cargo.toml
crates/greenmqtt-kv-raft/src/: lib.rs  memory_node.rs  state_store.rs  tests.rs  types.rs
crates/greenmqtt-kv-server/: Cargo.toml
crates/greenmqtt-kv-server/src/: host.rs  lib.rs  runtime.rs  tests.rs  types.rs
crates/greenmqtt-plugin-api/: Cargo.toml
crates/greenmqtt-plugin-api/src/: acl.rs  auth.rs  bridge.rs  hook.rs  lib.rs  rewrite.rs  webhook.rs
crates/greenmqtt-plugin-api/src/plugin_api/: mod.rs
crates/greenmqtt-proto/: Cargo.toml  build.rs
crates/greenmqtt-proto/src/: lib.rs
crates/greenmqtt-range-client/: Cargo.toml
crates/greenmqtt-range-client/src/: builder.rs  control_remote.rs  lib.rs  remote.rs  retain_remote.rs
crates/greenmqtt-retain/: Cargo.toml
crates/greenmqtt-retain/src/: lib.rs
crates/greenmqtt-rpc/: Cargo.toml
crates/greenmqtt-rpc/src/: client_traits.rs  clients.rs  lib.rs  quic_dist.rs  quic_inbox.rs  quic_kvrange.rs  quic_metadata.rs  quic_range_admin.rs  quic_range_control.rs  quic_retain.rs  quic_sessiondict.rs  registry_impls.rs  runtime.rs  service_impls.rs  tests.rs
crates/greenmqtt-sessiondict/: Cargo.toml
crates/greenmqtt-sessiondict/src/: lib.rs
crates/greenmqtt-storage/: Cargo.toml
crates/greenmqtt-storage/src/: lib.rs  traits.rs
crates/greenmqtt-storage/src/memory/: mod.rs
crates/greenmqtt-storage/src/redis/: mod.rs
crates/greenmqtt-storage/src/rocksdb/: mod.rs
crates/greenmqtt-storage/src/sled/: mod.rs
crates/greenmqtt-storage/src/tests/: mod.rs
deploy/local-k8s/: _e2e_common.sh  control-plane-smoke.sh  e2e-multi-dist-range.sh  e2e-offline-inbox.sh  e2e-persistent-session.sh  e2e-retain.sh  e2e-suite.sh  greenmqtt-3node-control-plane-autosplit-recommended-values.yaml  greenmqtt-3node-control-plane-values.yaml  greenmqtt-3node-values.yaml  redis.yaml
docs/: archive-checklist.md  basekv-refactor-todolist.md  bifromq-gap-todolist.md  ci-artifacts.md  docs-map.md  final-audit.md  freeze-checklist.md  gates.md  handoff-index.md  maintenance-index.md  operations-index.md  post-release-inspection.md  production-multi-raft-migration.md  production-multi-raft-todolist.md  replicated-rocksdb-todolist.md  rollback-drills.md  shard-operations.md  verification-profiles.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: packet_frame.rs
proto/: greenmqtt_internal.proto
scripts/: evaluate-gate.sh  render-summary-notification.sh  run-ci-artifact-suite.sh  run-cluster-profile.sh  run-compatibility-matrix.sh  run-config-rollback.sh  run-final-acceptance.sh  run-final-audit.sh  run-final-inventory.sh  run-freeze-summary.sh  run-maintenance-snapshot.sh  run-nightly-matrix.sh  run-performance-profile.sh  run-post-release-inspection.sh  run-release-checklist.sh  run-release-summary.sh  run-rollback-drill.sh  run-scheduled-checks.sh  run-shard-metrics-snapshot.sh  run-shard-recovery.sh  run-storage-upgrade-baseline.sh  run-summary-diff.sh  run-verification-suite.sh  run-workspace-smoke.sh  view-ci-artifacts.sh
scripts/lib/: summary.sh
