[workspace]
members = [
    "crates/greenmqtt-core",
    "crates/greenmqtt-kv-raft",
    "crates/greenmqtt-kv-engine",
    "crates/greenmqtt-kv-client",
    "crates/greenmqtt-kv-server",
    "crates/greenmqtt-kv-balance",
    "crates/greenmqtt-broker",
    "crates/greenmqtt-proto",
    "crates/greenmqtt-rpc",
    "crates/greenmqtt-sessiondict",
    "crates/greenmqtt-dist",
    "crates/greenmqtt-inbox",
    "crates/greenmqtt-retain",
    "crates/greenmqtt-storage",
    "crates/greenmqtt-plugin-api",
    "crates/greenmqtt-http-api",
    "crates/greenmqtt-cli",
    "crates/greenmqtt-cluster",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = { version = "1.11.1", features = ["serde"] }
dashmap = "6.1.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.51.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14.5", features = ["transport"] }
