[package]
name = "greenmqtt-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
fuzzing = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-plugin-api = { path = "../greenmqtt-plugin-api" }
greenmqtt-dist = { path = "../greenmqtt-dist" }
greenmqtt-inbox = { path = "../greenmqtt-inbox" }
greenmqtt-retain = { path = "../greenmqtt-retain" }
greenmqtt-sessiondict = { path = "../greenmqtt-sessiondict" }
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
futures-util = "0.3"
quinn = "0.11"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls-pemfile = "2"

[dev-dependencies]
greenmqtt-storage = { path = "../greenmqtt-storage" }
rcgen = "0.13"
tempfile = "3"
