[package]
name = "greenmqtt-capnp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
bytes.workspace = true
capnp = "0.25.4"
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-kv-raft = { path = "../greenmqtt-kv-raft" }

[build-dependencies]
capnpc = "0.25.3"
