[package]
name = "greenmqtt-http-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { version = "0.8.8", features = ["macros"] }
greenmqtt-broker = { path = "../greenmqtt-broker" }
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-dist = { path = "../greenmqtt-dist" }
greenmqtt-inbox = { path = "../greenmqtt-inbox" }
greenmqtt-kv-server = { path = "../greenmqtt-kv-server" }
greenmqtt-plugin-api = { path = "../greenmqtt-plugin-api" }
greenmqtt-rpc = { path = "../greenmqtt-rpc" }
greenmqtt-retain = { path = "../greenmqtt-retain" }
greenmqtt-sessiondict = { path = "../greenmqtt-sessiondict" }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
sysinfo.workspace = true
tokio.workspace = true

[dev-dependencies]
greenmqtt-kv-engine = { path = "../greenmqtt-kv-engine" }
greenmqtt-kv-raft = { path = "../greenmqtt-kv-raft" }
greenmqtt-storage = { path = "../greenmqtt-storage" }
serde_json = "1.0.149"
tower = { version = "0.5.3", features = ["util"] }
