[package]
name = "greenmqtt-inbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-storage = { path = "../greenmqtt-storage" }
tokio.workspace = true
