[package]
name = "greenmqtt-kv-balance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }

[dev-dependencies]
greenmqtt-rpc = { path = "../greenmqtt-rpc" }
tokio.workspace = true
