[package]
name = "greenmqtt-kv-balance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
greenmqtt-cluster = { path = "../greenmqtt-cluster" }
greenmqtt-core = { path = "../greenmqtt-core" }
tokio.workspace = true

[dev-dependencies]
greenmqtt-rpc = { path = "../greenmqtt-rpc" }
