[package]
name = "greenmqtt-kv-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-kv-engine = { path = "../greenmqtt-kv-engine" }
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
