[package]
name = "greenmqtt-kv-raft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
