[package]
name = "greenmqtt-kv-raft"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
bincode = "1.3.3"
greenmqtt-core = { path = "../greenmqtt-core" }
metrics.workspace = true
rocksdb = "0.24.0"
serde.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio.workspace = true
