[package]
name = "greenmqtt-kv-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-kv-engine = { path = "../greenmqtt-kv-engine" }
greenmqtt-kv-raft = { path = "../greenmqtt-kv-raft" }
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
