[package]
name = "greenmqtt-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
greenmqtt-core = { path = "../greenmqtt-core" }
bytes.workspace = true
tonic.workspace = true
prost = "0.13"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
