[package]
name = "greenmqtt-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-kv-engine = { path = "../greenmqtt-kv-engine" }
greenmqtt-kv-raft = { path = "../greenmqtt-kv-raft" }
bytes.workspace = true
tonic.workspace = true
prost = "0.14.3"
tonic-prost = "0.14.5"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
