[package]
name = "greenmqtt-range-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-kv-client = { path = "../greenmqtt-kv-client" }
greenmqtt-kv-engine = { path = "../greenmqtt-kv-engine" }
greenmqtt-rpc = { path = "../greenmqtt-rpc" }
