[package]
name = "greenmqtt-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode = "1.3.3"
bytes.workspace = true
metrics.workspace = true
greenmqtt-broker = { path = "../greenmqtt-broker" }
greenmqtt-core = { path = "../greenmqtt-core" }
greenmqtt-dist = { path = "../greenmqtt-dist" }
greenmqtt-inbox = { path = "../greenmqtt-inbox" }
greenmqtt-kv-client = { path = "../greenmqtt-kv-client" }
greenmqtt-kv-engine = { path = "../greenmqtt-kv-engine" }
greenmqtt-kv-raft = { path = "../greenmqtt-kv-raft" }
greenmqtt-kv-server = { path = "../greenmqtt-kv-server" }
greenmqtt-plugin-api = { path = "../greenmqtt-plugin-api" }
greenmqtt-proto = { path = "../greenmqtt-proto" }
greenmqtt-retain = { path = "../greenmqtt-retain" }
greenmqtt-sessiondict = { path = "../greenmqtt-sessiondict" }
greenmqtt-storage = { path = "../greenmqtt-storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower = { version = "0.5.3", features = ["util"] }

[dev-dependencies]
tempfile = "3.27.0"
