[package]
name = "greenmqtt-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
greenmqtt-core = { path = "../greenmqtt-core" }
serde_json = "1.0.149"
sled = "0.34.7"
tokio.workspace = true
rocksdb = "0.24.0"
redis = { version = "1.1.0", features = ["aio", "tokio-comp"] }

[dev-dependencies]
tempfile = "3.27.0"
